--- a/FirstDemo/app.json
+++ b/FirstDemo/app.json
@@ -4,7 +4,8 @@
     "pages/logs/logs",
     "pages/search/search",
     "pages/list/list",
-    "pages/detail/detail"
+    "pages/detail/detail",
+    "pages/map/map"
   ],
   "window":{
     "backgroundTextStyle":"light",
